[tool.poetry]
name = "baekjoon-refiner"
version = "0.1.0"
description = ""
authors = ["RanolP <public.ranolp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^1.6.4"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
